cabal-version: 3.0
name: mptcp-pm
version: 0.0.3
license: GPL-3.0-only
license-file: LICENSE
build-type: Simple
Maintainer:  teto
Category:   Network
Synopsis: A Multipath TCP path manager
Homepage:   https://github.com/teto/netlink_pm
Description:
  Multipath TCP (www.multipath-tcp.org) starting from version 0.95 provides a 
  netlink path manager module. This package implements the userspace component 
  in charge of controlling MPTCP subflow establishement and various behaviors.
data-files:
extra-source-files: headers/*.h headers/linux/*.h README.md CHANGELOG

Source-repository head
  type:       git
  location:   https://github.com/teto/netlink_pm


Flag Dev {
  Description: Develop with a local netlink library
  Default:     True
}


-- aeson to (de)serialize to json
-- text is used to convert from string and in aeson
common shared-properties
    build-depends: base >= 4.12 , optparse-applicative,
      containers, bytestring
       -- TODO use katip instead
       , fast-logger
       , katip
       , process
       , cereal
       , ip
       , netlink >= 1.1.1.0
       , bytestring-conversion
       , transformers
       , text
       , mtl
       -- for merge
       , aeson
       , aeson-pretty
       , aeson-extra
       -- to help with merging json content
       , unordered-containers
       -- to create temp folder/files
       , temporary
       , filepath
       -- , bitset  -- bitset, interesting but broken

    default-language: Haskell2010
    -- -fno-warn-unused-imports 
    -- -fforce-recomp  makes it build twice
    ghc-options: -Wall -fno-warn-unused-binds -fno-warn-unused-matches -fprof-auto

    if flag(Dev)
        build-depends: netlink>= 1.1.1.1
    -- for the .chs => c2hs
    -- apparently this just helps getting a better error messages
    Includes:          tcp_states.h, linux/sock_diag.h, linux/inet_diag.h, linux/mptcp.h
    -- TODO try to pass it from CLI instead , Net.TcpInfo
    include-dirs:    headers
    autogen-modules: Net.Mptcp.Constants, Net.SockDiag.Constants, Net.Tcp.Constants

library
    import: shared-properties
    hs-source-dirs: .
    build-tool-depends: c2hs:c2hs
    Exposed-Modules: Net.SockDiag, Net.Tcp, Net.Mptcp, Net.IPAddress,
      Net.Mptcp.PathManager, Net.Mptcp.Constants, Net.SockDiag.Constants, Net.Tcp.Constants
      , Net.Mptcp.PathManager.Default


-- monitor new mptcp connections
-- and delegate the behavior to a monitor
-- executable mptcp-manager
--     import: shared-properties
--     -- ghc-options: -prof
--     build-depends: mptcp-lib      , fast-logger
--        , hslogger

--     main-is: hs/daemon.hs
--     hs-source-dirs: .
--     ghc-options: -threaded -fprof-auto -rtsopts
