cabal-version: 2.2
name: netlink-pm
version: 1.0.0
license: GPL-3.0-only
license-file: gpl-3.0.txt
build-type: Simple
-- build-depends: base, netlink, optparse-applicative, binary, containers, bytestring, cereal, fast-logger
Maintainer:  whoknows
Homepage:   https://github.com/Ongy/netlink-hs
description:
  Supposed to be an MPTCP path manager

Source-repository head
  type:       git
  location:   https://github.com/teto/mptcpnetlink


Flag Dev {
  Description: Develop with a local netlink library
  Default:     True
}

common shared-properties
    build-depends: base, optparse-applicative, bytestring-conversion,
        containers, bytestring, fast-logger, process, cereal
        -- , ip
        , netlink>= 1.1.1.0
    default-language: Haskell2010
    if flag(Dev)
        build-depends: netlink>= 1.1.1.1



executable daemon
    import: shared-properties
    -- ghc-options: -i/home/teto/netlink-hs
    ghc-options: -Wall -Werror -fno-warn-unused-binds -fno-warn-unused-matches
    main-is: daemon.hs
    default-language: Haskell2010
    -- for the generated.hsc , c2hs seems good to generate headers
    Build-tools:       hsc2hs, c2hs
    -- apparently this just helps getting a better error messages
    Includes:          tcp_states.h, linux/sock_diag.h, linux/inet_diag.h
    Other-modules:     Generated, IDiag
    -- TODO try to pass it from CLI instead
    include-dirs: .
    -- extra-packages: netlink
    -- extra-lib-dirs: /home/teto/netlink-hs
  -- hs-source-dirs: Utils

