cabal-version: 2.2
name: netlink-pm
version: 1.0.0
license: GPL-3.0-only
license-file: gpl-3.0.txt
build-type: Simple
-- build-depends: base, netlink, optparse-applicative, binary, containers, bytestring, cereal, fast-logger
Maintainer:  whoknows
Homepage:   https://github.com/Ongy/netlink-hs
description:
  Supposed to be an MPTCP path manager

Source-repository head
  type:       git
  location:   https://github.com/teto/mptcpnetlink


Flag Dev {
  Description: Develop with a local netlink library
  Default:     True
}



-- , ip
common shared-properties
    build-depends: base, optparse-applicative, bytestring-conversion,
        containers, bytestring, fast-logger, process, cereal
        , netlink>= 1.1.1.0
    default-language: Haskell2010
    ghc-options: -Wall -Werror -fno-warn-unused-binds -fno-warn-unused-matches
    if flag(Dev)
        build-depends: netlink>= 1.1.1.1
    -- for the generated.hsc , c2hs seems good to generate headers
    Build-tools:       hsc2hs, c2hs
    -- apparently this just helps getting a better error messages
    Includes:          tcp_states.h, linux/sock_diag.h, linux/inet_diag.h
    Other-modules:     Generated, IDiag, Mptcp
    -- TODO try to pass it from CLI instead
    include-dirs: .



-- monitor new mptcp connections
-- and delegate the behavior to a monitor
executable daemon
    import: shared-properties
    -- ghc-options: -i/home/teto/netlink-hs
    ghc-options: -Wall -Werror -fno-warn-unused-binds -fno-warn-unused-matches
    main-is: daemon.hs
    -- extra-packages: netlink
    -- extra-lib-dirs: /home/teto/netlink-hs
    hs-source-dirs: .

-- will monitor a specific mptcp connection
executable monitor
    import: shared-properties
    main-is: monitor.hs

-- for short tests
executable short
    import: shared-properties
    main-is: test.hs

-- library Generated
--     import: shared-properties


Test-Suite test
  -- 2 types supported, exitcode is based on ... exit codes ....
  type:               exitcode-stdio-1.0
  main-is:            test/Main.hs
  -- test-module:       Detailed
  hs-source-dirs:     .
  default-language: Haskell2010
  -- import: shared-properties
  Build-tools:       hsc2hs, c2hs
  Includes:          tcp_states.h, linux/sock_diag.h, linux/inet_diag.h
  Other-modules:     Generated, IDiag
  include-dirs:      .
  build-depends:      base >=4.6
                     , HUnit
                     , netlink
                     , cereal
                     -- , test-framework
                     -- , test-framework-hunit
